gitops-repo/kubernetes/cicd/jenkins/gitlab-endpoint.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-service
  namespace: jenkins
spec:
  ports:
    - port: 80
      targetPort: 8080  # EKS 내부에서는 80으로 호출하면, 외부 8080으로 연결되게 함
---
apiVersion: v1
kind: Endpoints
metadata:
  name: gitlab-service
  namespace: jenkins
subsets:
  - addresses:
      - ip: 10.0.4.10   # 외부 GitLab EC2 IP
    ports:
      - port: 8080      # 외부 GitLab 실제 포트
