gitops-repo/kubernetes/cicd/jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  spec:
    ingressClassName: traefik  # K3s 기본 컨트롤러인 Traefik 사용
spec:
  rules:
  - host: jenkins.local                   # 우리가 사용할 가짜 도메인
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins                 # 젠킨스 서비스 이름
            port:
              number: 8080                # 젠킨스 내부 포트
